@@ -7,6 +7,7 @@ Version 1.3.1 - SVN
    data for that cell (Closes: #1582358).
  - Fix possible buffer overflow in submitcommon.cc; Thanks to
    Lennert Buytenhek for pointing out.
+ - Add option to commandline submit to use websubmit (Closes: #1582376).
  - Fix clarification wrapping.
  - Fix some language typos.
  - Improve webinterface layout (CSS modifications)
